@@ -98,6 +98,7 @@ Name                                Type                                Descript
 ``SLUG_TAG_PATH``                   bool                                ``SLUG_TAG_PATH`` setting
 ``social_buttons_code``             TranslatableSetting<str>            ``SOCIAL_BUTTONS_CODE`` setting
 ``sort_posts``                      function                            ``utils.sort_posts`` function
+``smartjoin``                       function                            ``utils.smartjoin`` function
 ``template_hooks``                  dict<str, TemplateHookRegistry>     Template hooks registered by plugins
 ``theme_color``                     str                                 ``THEME_COLOR`` setting
 ``timezone``                        tzinfo                              Timezone object (represents the configured timezone)
