@@ -8,7 +8,7 @@
 {% block extra_head %}
     {{ super() }}
     {% if post.meta('keywords') %}
-    <meta name="keywords" content="{{ post.meta('keywords')|e }}">
+    <meta name="keywords" content="{{ smartjoin(', ', post.meta('keywords'))|e }}">
     {% endif %}
     <meta name="author" content="{{ post.author()|e }}">
     {% if post.prev_post %}
