@@ -9,7 +9,7 @@
 {% block extra_head %}
     {{ super() }}
     {% if post.meta('keywords') %}
-    <meta name="keywords" content="{{ post.meta('keywords')|e }}">
+    <meta name="keywords" content="{{ smartjoin(', ', post.meta('keywords'))|e }}">
     {% endif %}
     {% if post.description() %}
     <meta name="description" itemprop="description" content="{{ post.description()|e }}">
