@@ -9,7 +9,7 @@
 <%block name="extra_head">
     ${parent.extra_head()}
     % if post.meta('keywords'):
-    <meta name="keywords" content="${post.meta('keywords')|h}">
+    <meta name="keywords" content="${smartjoin(', ', post.meta('keywords'))|h}">
     % endif
     %if post.description():
     <meta name="description" itemprop="description" content="${post.description()|h}">
