@@ -37,7 +37,7 @@ except ImportError:
     jinja2 = None  # NOQA
 
 from nikola.plugin_categories import TemplateSystem
-from nikola.utils import makedirs, req_missing, sort_posts
+from nikola.utils import makedirs, req_missing, sort_posts, _smartjoin_filter
 
 
 class JinjaTemplates(TemplateSystem):
@@ -65,6 +65,7 @@ class JinjaTemplates(TemplateSystem):
         self.lookup.lstrip_blocks = True
         self.lookup.filters['tojson'] = json.dumps
         self.lookup.filters['sort_posts'] = sort_posts
+        self.lookup.filters['smartjoin'] = _smartjoin_filter
         self.lookup.globals['enumerate'] = enumerate
         self.lookup.globals['isinstance'] = isinstance
         self.lookup.globals['tuple'] = tuple
